# WEB_Module_6

./: create_db.py  create_db.sql  hw_database.db  pyproject.toml  queries.py  seeds.py
query_sql/: query_1.sql  query_10.sql  query_11.sql  query_12.sql  query_2.sql  query_3.sql  query_4.sql  query_5.sql  query_6.sql  query_7.sql  query_8.sql  query_9.sql
