[tool.poetry]
name = "web-module-6"
version = "0.1.0"
description = ""
authors = ["VictoriiaCher <cherevchenko.victoriy@gmail.com>"]
readme = "README.md"
packages = [{include = "web_module_6"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
